# media-agent-suite-cc-plugin

./: README.md  manifest.json  pyproject.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: mekit-twitter-analyst.md  mekit-twitter-publisher.md  mekit-twitter-strategist.md  mekit-twitter-writer.md
cli/: __init__.py  mekit.py
cli/core/: __init__.py  cache.py  config.py  errors.py  protocol.py  registry.py  runner.py  runtime.py  storage.py  upgrade.py
hooks/: mekit-twitter-post-discover.py  mekit-twitter-post-publish.py  mekit-twitter-pre-discover.py  mekit-twitter-pre-publish.py
skills/mekit-twitter-analyze/: SKILL.md
skills/mekit-twitter-create/: SKILL.md
skills/mekit-twitter-discover/: SKILL.md
skills/mekit-twitter-evolve/: SKILL.md
skills/mekit-twitter-monitor/: SKILL.md
skills/mekit-twitter-pipeline/: SKILL.md
skills/mekit-twitter-publish/: SKILL.md
skills/mekit-twitter-review/: SKILL.md
